ifdef::env-github[]
:toc-title:
:tip-caption: :bulb:
:note-caption: :bulb:
:important-caption: :heavy_exclamation_mark:
:caution-caption: :fire:
:warning-caption: :warning:
endif::[]

ifdef::env-github[]
[discrete]
== Contents
endif::[]
toc::[]

:link-proxy-from-env: https://golang.org/pkg/net/http/#ProxyFromEnvironment

== HEAD
*   fix htrie matching of non punycode (eg. unicode) idna hostnames

== v2.4.4 - 2023-07-25
*   update dependencies
*   bump version in go.mod (and fix all internal module references) +
    ref: discussion link:https://github.com/cactus/go-camo/discussions/62[#62]

== v2.4.3 - 2023-02-18
*   update library dependency golang.org/x/net. +
    refs:
    link:https://github.com/cactus/go-camo/security/dependabot/3[dependabot-3],
    link:https://github.com/cactus/go-camo/security/dependabot/4[dependabot-4]

== v2.4.2 - 2023-02-16
*   update library dependency prometheus, covering CVE-2022-21698. +
    Note that for go-camo, the issue in the prometheus library was exploitable
    only when the metrics option/flag (--metrics) is enabled.
*   build with go1.19.5

== v2.4.1 - 2022-09-28
*   Rebuild release with go-1.19.1

== v2.4.0 - 2022-01-30
*   Add support for internal address proxies (HTTP(S)_PROXY). +
    issue #55
*   Add some additional documentation/caveats regarding HTTP(S)_PROXY usage.

== v2.3.0 - 2021-10-20
*   Add support for listening on a unix socket.
*   A more graceful shutdown process, under SIGINT or SIGTERM.

== v2.2.2 - 2021-08-21
*   Change test only helper library
*   structure logging (json) support for http requests (debug logging). +
    PR #52

== v2.2.1 - 2021-03-25
*   Update some dependencies.

== v2.2.0 - 2021-01-10
*   Move ip filtering to Dialer.Control, to further improve SSRF protections. +
    Note: Added a few additional debug log messages emitted when ip filtering

== v2.1.5 - 2020-08-11
*   Rebuild release with go-1.15

== v2.1.4 - 2020-02-18
*   Rebuild release with go-1.13.8
*   Experimental windows build
